fixed navbar overlapping modal

--- a/soctrack/app/assets/stylesheets/application.css
+++ b/soctrack/app/assets/stylesheets/application.css
@@ -185,8 +185,3 @@ body {
 .pastFlight {
   color: red;
 }
-
-body.modal-open div.modal-backdrop {
-  position: relative;
-  /*do something with z-index maybe?*/
-}
